tests/regression/errors/basic/syntax_error_5.csd
// Syntax error test 5 - missing semicolon
sus x drip = 5
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
